<resources>
    <string name="app_name">EarlyBird</string>
    <string name="button_Monday">Mo</string>
    <string name="button_Sunday">So</string>
    <string name="button_Tuesday">Di</string>
    <string name="button_Thursday">Do</string>
    <string name="button_Friday">Fr</string>
    <string name="button_Wednesday">Mi</string>
    <string name="button_Saturday">Sa</string>
    <string name="startAddress">Startadresse, Hausnummer, Stadt</string>
    <string name="destinationAddress">Zieladresse, Hausnummer, Stadt</string>
    <string name="textTime"></string>
    <string name="chooseAlarm">Deine erechnete Vorbereitungszeit beträgt:</string>
    <string name="chooseDestinationTime">Wähle deine Ankunftszeit:</string>
    <string name="infoTextPreparationTime"></string>
    <string name="button_safeDirection">Route Speichern</string>
    <string name="EarlyBird">EarlyBird</string>
    <string name="alarmText">Wähle deine Weckzeit:</string>
    <string name="chooseDirecton">Wähle deine Route:</string>
    <string name="title_activity_maps">Map</string>
    <string name="Montag">Montag</string>
    <string name="Dienstag">Dienstag</string>
    <string name="Mittwoch">Mittwoch</string>
    <string name="Freitag">Freitag</string>
    <string name="Donnerstag">Donnerstag</string>
    <string name="Samstag">Samstag</string>
    <string name="Sonntag">Sonntag</string>
    <string name="stop_alarm">Wach!</string>

    <string name="alarm_set_no_day">Wecker ist aus</string>
    <string name="alarm_set_time_today">Wecker klingelt um %1$02d:%2$02d</string>
    <string name="alarm_set_time_other_day">Wecker wurde auf %1$02d:%2$02d in %3$d Tagen gestellt</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="default_info_title" />
    <string name="default_info_snippet" />
    <string name="google_place_API">AIzaSyDt9jlNiNfCvnOVNDtUt-8pRtgketBNkyw</string>
    <string name="OK">Öffentliche Verkehrsmittel</string>
    <string name="PKW">Ich fahre mit dem Auto</string>
    <string name="shosRoute">Route anzeigen</string>
    <string name="wake_up_infoText" />
    <string name="earlybird">Early Bird</string>


</resources>
