<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="20dp"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/lineare">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_gravity="start|top"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/alarmText"
    android:id="@+id/text_weckzeit"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="14sp"/>

    <TimePicker
        android:layout_width="match_parent"
        android:timePickerMode="spinner"
        android:id="@+id/TimePickerAlarm"
        android:orientation="vertical"
        android:layout_height="90dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/toggleButtonMO"
            android:textOff="@string/button_MO"
            android:textOn="@string/button_MO"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_weight="0" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/toggleButtonDI"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textOff="@string/button_Tuesday"
            android:textOn="@string/button_Tuesday"
            android:layout_weight="0"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/toggleButtonMI"
            android:textOff="@string/button_Wednesday"
            android:textOn="@string/button_Wednesday"
            android:minWidth="0dp"
            android:minHeight="0dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/toggleButtonDO"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textOff="@string/button_Thursday"
            android:textOn="@string/button_Thursday" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/toggleButtonFR"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textOff="@string/button_Friday"
            android:textOn="@string/button_Friday" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/toggleButtonSA"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textOff="@string/button_Saturday"
            android:textOn="@string/button_Saturday" />

        <ToggleButton
            android:layout_width="55dp"
            android:id="@+id/toggleButtonSO"
            android:textOff="@string/button_SO"
            android:textOn="@string/button_SO"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_height="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="6dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chooseDirecton"
            android:id="@+id/text_Route"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText_startAddress"
            android:text="@string/startAddress"
            android:paddingTop="4dp"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText_destinationAddress"
            android:text="@string/destinationAddress"
            android:textSize="14sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_safeDirection"
            android:id="@+id/buuton_SaveDirection"
            android:textSize="14sp"
            android:background="@drawable/buttoncolorr"
            android:textColor="?attr/colorBackgroundFloating"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chooseAlarm"
            android:id="@+id/text_vorbereitungszeit"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_gravity="bottom"
            android:layout_margin="4dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:text="@string/textTime"
            android:ems="10"
            android:id="@+id/editText_PrepTime"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/chooseDestinationTime"
            android:id="@+id/text_chooseDestinationTime"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TimePicker
            android:layout_width="match_parent"
            android:timePickerMode="spinner"
            android:orientation="vertical"
            android:id="@+id/TimePickerDes"
            android:layout_height="80dp" />

    </LinearLayout>

    <TextView
    android:layout_width="match_parent"
    android:text="@string/infoTextPreparationTime"
    android:id="@+id/textView"
    android:visibility="visible"
    style="@style/Base.AlertDialog.AppCompat.Light"
    android:textColor="@color/eb_rosered"
    android:textSize="12sp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_vertical" />


</LinearLayout>
